@@ -1,5 +1,11 @@
 2001-08-06  Alex Graveley  <alex@ximian.com>
 
+	* src/soup-core/soup-transfer.c (soup_transfer_read_cb): Remove
+	warning used for testing.
+	(soup_transfer_write_cb): Ditto.
+
+2001-08-06  Alex Graveley  <alex@ximian.com>
+
 	* src/soup-core/soup-transfer.c (soup_transfer_read_cb): Read
 	speedup to read all available data before processing and returning
 	to the mainloop.
